fix(sidebar): improve color for better readability
In light mode, the sidebar text was nearly impossible to read and lacked accessibility. This change enhances the gradient color to ensure better contrast and readability.

--- a/css/list.css
+++ b/css/list.css
@@ -78,6 +78,10 @@
   width: min(30em, calc(100vw - 8rem));
 }
 
+[data-smallUI] #list:has(> #lists__sidebar[data-pinned]) #progressbar {
+  width: min(30em, calc(100vw - 6rem));
+}
+
 #progressbar__fill {
   width: 0%;
   height: 100%;
