--- a/css/style.css
+++ b/css/style.css
@@ -184,7 +184,7 @@
   --progressbar-text-shadow-color: hsla(0, 0%, 95%);
 
   /* Config Current List */
-  --lists-sidebar-bg-gradient: linear-gradient(0deg, #232c48, #4b5883);
+  --lists-sidebar-bg-gradient: linear-gradient(0deg, #a7bbee, #e0e5f4);
   --lists-sidebar-dark: rgba(0, 0, 0, 0.5);
 
   /* Screens */
